  * Updated fakevm and mosc with hacks for Scheme environments to work around
    the differences in write, and the lack of display.
  * the suspend and pause primitives now properly clear their call frames off
    the return stack.
  * the read primitive now properly clears its call frame off the return stack
    if it blocks to monitor.
  + t newline now moved to the core module, and supports an optional port
    argument.
  + mqo_show_string will show an escaped version of the string.

- 2/08/2006, Replacement of TAVL with TREAP
  * Replaced tavl.c with tree.c -- using a faster, simpler tree implementation
    based on treaps.
  * Fixed a bug involving errors in mqo_compare due to implicit sign conversion
    issues when subtracting pointers.
  * All internal show functions how require a count pointer.
  * Show now employs a pointer in the type object to determine how to display
    a value.
  * Show has been refitted for consistency.
  * Massive rearrangement of functions into individual files, out of memory.c,
    exec.c and show.c.
  * Renamed net.c to the more precise os.c.
  * Fixed a bug involving issues on BSDs with changing stdin to nonblocking 
    causing stdout to become nonblocking as well.
  * Added mosc.mo to the distribution.

- 2/02/2006, Refit of Alarms to make Monitors
  * Removed read-alarm, write-alarm and the alarm type from mosvm.
  * Added the monitor primitive to os.c.
  * Added the unmonitor primitive to os.c
  * Added the monitor field to descr.
  * Added a result and monitor field to descr.
  * Added four specialized types of descr; console, file, socket and listener.
  * Altered primitives in os.c to specify which type of descr they act on.
  * Added the REQ_ANY_DESCR_ARG macro to mosvm/prim.h
  * Removed alarm.c in favor of dispatch.c
  * Added dispatch.c, which employs select to determine if any sockets might
    be ready to read, then attempts to read to ensure that they are -- a 