@@ -16,9 +16,7 @@
 
 (export "lib/optimize")
 
-(define (optimize assembly) assembly)
-
-(define (ooptimize assembly)
+(define (optimize assembly)
   (define pending (make-tc))
   (define completed (make-tc))
   (define result (make-tc))
